@@ -3,22 +3,25 @@
   "ph-scale-basics.name": "pH Scale: Basics",
   "custom": "Custom",
   "solutions": "Solutions",
-  "choice.milk": "milk",
-  "choice.batteryAcid": "battery acid",
-  "choice.vomit": "vomit",
-  "choice.soda": "soda pop",
-  "choice.beer": "beer",
-  "choice.coffee": "coffee",
-  "choice.spit": "spit",
-  "choice.blood": "blood",
-  "choice.handSoap": "hand soap",
-  "choice.water": "water",
-  "choice.drainCleaner": "drain cleaner",
-  "choice.custom": "custom liquid",
+  "choice.milk": "Milk",
+  "choice.batteryAcid": "Battery Acid",
+  "choice.vomit": "Vomit",
+  "choice.soda": "Soda Pop",
+  "choice.beer": "Beer",
+  "choice.coffee": "Coffee",
+  "choice.spit": "Spit",
+  "choice.blood": "Blood",
+  "choice.handSoap": "Hand Soap",
+  "choice.water": "Water",
+  "choice.drainCleaner": "Drain Cleaner",
+  "choice.custom": "Custom",
   "units.liters": "L",
   "units.moles": "mol",
   "units.molesPerLiter": "mol/L",
   "pattern.0value.1units": "{0} {1}",
   "pattern.0name.1pH": "{0} (pH {1})",
-  "pH": "pH"
+  "pH": "pH",
+  "acidic": "Acidic",
+  "basic": "Basic",
+  "neutral": "7 (Neutral)"
 }
